--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^3.5.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "less-loader": "^6.0.0",
     "style-loader": "^1.1.4",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
@@ -31,6 +32,7 @@
   "dependencies": {
     "jquery": "^3.5.0",
     "mint-ui": "^2.2.13",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   }
 }
